init: start responsive task

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
         <header  class="header">
             <div class="container all__header">
+                <div class="burger__menu">
+                    <img src="assets/images/Burger-menu-icon.png" alt="menu">
+                </div>
                 <div class="logo__header">
                      <h1>SINGOLO <span>*</span></h1>
                 </div>
